Changelog for GHCiD

    #1, if there is an IOError just :reload
    Say why you are reloading
0.1.1
    Support arguments to --command
0.1
    Initial version